[package]
name = "java-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serenity = "0.11.6"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.9" }
serde = "1.0.183"

[workspace]
members = [
    "prisma-cli"
]
resolver = "2"